--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,12 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^6.4.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
