--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     volumes:
       - mongodata:/data/db
 
+  redis:
+    image: redis:6.2-alpine
+    ports:
+      - 6379:6379
+    volumes:
+      - redisdata:/data
+    command: redis-server --save 20 1 --loglevel warning
 volumes:
   mongodata: {}
   redisdata: {}
