--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^8.9.5",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.3.1",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
