--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://localhost:27017/fintracker
+DATABASE_URL=mongodb://acoes-simples-mongodb-1:27017/fintracker
 
 REFRESH_TOKEN_SECRET="i6aXnMuF5OQQwNqC"
 ACCESS_TOKEN_SECRET="1LjF6lwVZ7VDhS4S"
